--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -4,7 +4,8 @@ Hello Disqus!
   <script>
     var disqus_config = function () {
       this.page.url = '{{ page.url | absolute_url }}';
-      this.page.identifier = '{{ page.url | absolute_url }}';
+      this.page.identifier = '{{ site.disqus_shortname }}';
+      this.page.title = '{{ site.disqus_shortname }}';
     };
 
     (function() {
