--- a/_layouts/cooking-home.html
+++ b/_layouts/cooking-home.html
@@ -4,13 +4,12 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading"><b>Programming</b></h1>
+  <h1 class="page-heading"><b>Recipes and ideas</b></h1>
   
   {{ content }}
 
-  <ul class="post-list">
-    {% for post in site.categories["programming"] %}
-      
+  <ul class="post-list cooking">
+    {% for post in site.categories["cooking"] %}
       <li>
         {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
         <span class="post-meta">{{ post.date | date: date_format }}</span>
@@ -24,7 +23,8 @@ layout: default
           <a href="{{ site.baseurl }}{{ post.url }}">Read more</a>
         {% endif %}
       </li>
-    
+
+
     {% endfor %}
   </ul>
 
