--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
   {% include head.html %}
-  {% include custom-css-head.html %}
+  <!-- {% include custom-css-head.html %} -->
 
   <body>
 
