--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
 
     {% include footer.html %}
     <script id="dsq-count-scr" src="https://{{ site.disqus_shortname }}.disqus.com/count.js" async></script>
-    {% if jekyll.environment == 'production' %}
-      {% include analytics.html %}
+    {% if jekyll.environment == "production" %}
+    {% include analytics.html %}
     {% endif %}
   </body>
 
