--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,9 @@
     {% include footer.html %}
     <script id="dsq-count-scr" src="https://{{ site.disqus_shortname }}.disqus.com/count.js" async></script>
     {% if jekyll.environment == "production" %}
-    {% include analytics.html %}
+      {% include analytics.html %}
+    {% else %}
+      Not production
     {% endif %}
   </body>
 
