--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading"><b>Posts related to comp sci, academia, etc.</b></h1>
+  <h1 class="page-heading">Welcome to my blog!</h1>
   
   {{ content }}
 
