--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,12 +4,13 @@ layout: default
 
 <div class="home">
 
+  
   <h1 class="page-heading">Welcome.</h1>
   
   {{ content }}
 
   <ul class="post-list">
-    {% for post in site.categories["programming"] %}
+    {% for post in site.posts %}
       
       <li>
         {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
