--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,8 +10,8 @@ layout: default
         {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
         {{ page.date | date: date_format }}
       </time>
-      • {% for tag in page.tags %}
-        {{ tag }} •
+      Topics: {% for tag in page.tags %}
+        • {{ tag }} 
       {% endfor %}
       {% if page.author %}
         <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>
