--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
         {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
         {{ page.date | date: date_format }}
       </time>
-      Topics: {% for tag in page.tags %}
+      Topic(s): {% for tag in page.tags %}
         • {{ tag }} 
       {% endfor %}
       {% if page.author %}
