fixed comment count

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,12 +10,13 @@ layout: default
         {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
         {{ page.date | date: date_format }}
       </time>
-      Topic(s): {% for tag in page.tags %}
-        • {{ tag }} 
+      • {% for tag in page.tags %}
+        {{ tag }} •
       {% endfor %}
       {% if page.author %}
         <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>
       {% endif %}
+      {% if page.comments %} <a href="https://{{ site.url }}/{{ page.url }}#disqus_thread">0 Comments</a>{% endif %}
     
       </p>
   </header>
