--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,9 @@
   <body>
 
     {% include header.html %}
-
+    
     <main class="page-content" aria-label="Content">
+    {% include sidebar.html %}
       <div class="wrapper">
         {{ content }}
       </div>
