--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 <div class="home">
 
   
-  <h1 class="page-heading">Hi there.</h1>
+  <h1 class="page-heading">A few things I've been up to lately:</h1>
   
   {{ content }}
 
